Added artifact items

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </div>
                 <div class="arti-count-wrapper">
                     <div class="arti-count">
-                        <h3>Artifact <span id="current-arti-count">1</span>/1500</h3>
+                        <h3>Artifacts <span id="current-arti-count">950</span>/1500</h3>
                     </div>
                     <button type="button" class="close-btn btn-lg">
                         <i class="fas fa-expand-arrows-alt fa-lg"></i>
@@ -85,21 +85,108 @@
             <div class="body-wrapper">
                 <div class="arti-menu-wrapper">
                     <div class="arti-menu-row">
-                        <div class="arti-item">
-                            <div class="arti-lock">
-                                <img src="" />
+                        <div class="arti-item-bg">
+                            <div class="arti-item">
+                                <div class="arti-lock">
+                                    <img src="assets/UI/artilock.png" />
+                                </div>
+                                <div class="arti-active-user">
+                                    <img class="activeBG" src="assets/UI/artiActiveBG.png" />
+                                    <img class="active-char" src="assets/char/Character_Yun_Jin_Side_Icon.webp">
+                                </div>
+                                <div class="arti-icon">
+                                    <img src="assets/artifacts/Item_Plume_of_Luxury.png" />
+                                </div>
+                                <div class="arti-rarity">
+                                    <img src="assets/UI/Icon_5_Stars.webp" />
+                                </div>
+                                <div class="arti-level">
+                                    <h2 style="font-size: 19px;">+20</h2>
+                                </div>
                             </div>
-                            <div class="arti-active-user">
-                                <img src="" />
+                        </div>
+
+                        <div class="arti-item-bg">
+                            <div class="arti-item">
+                                <div class="arti-lock">
+                                    <img src="assets/UI/artilock.png" />
+                                </div>
+                                <div class="arti-active-user">
+                                    <img class="activeBG" src="assets/UI/artiActiveBG.png" />
+                                    <img class="active-char" src="assets/char/Character_Yun_Jin_Side_Icon.webp">
+                                </div>
+                                <div class="arti-icon">
+                                    <img src="assets/artifacts/Item_Song_of_Life.webp" />
+                                </div>
+                                <div class="arti-rarity">
+                                    <img src="assets/UI/Icon_5_Stars.webp" />
+                                </div>
+                                <div class="arti-level">
+                                    <h2 style="font-size: 19px;">+20</h2>
+                                </div>
                             </div>
-                            <div class="arti-icon">
-                                <img src="" />
+                        </div>
+
+                        <div class="arti-item-bg">
+                            <div class="arti-item">
+                                <div class="arti-lock">
+                                    <img src="assets/UI/artilock.png" />
+                                </div>
+                                <div class="arti-active-user">
+                                    <img class="activeBG" src="assets/UI/artiActiveBG.png" />
+                                    <img class="active-char" src="assets/char/Character_Yun_Jin_Side_Icon.webp">
+                                </div>
+                                <div class="arti-icon">
+                                    <img src="assets/artifacts/Item_Bloom_Times.webp" />
+                                </div>
+                                <div class="arti-rarity">
+                                    <img src="assets/UI/Icon_5_Stars.webp" />
+                                </div>
+                                <div class="arti-level">
+                                    <h2 style="font-size: 19px;">+20</h2>
+                                </div>
                             </div>
-                            <div class="arti-rarity">
-                                <img src="" />
+                        </div>
+
+                        <div class="arti-item-bg">
+                            <div class="arti-item">
+                                <div class="arti-lock">
+                                    <img src="assets/UI/artilock.png" />
+                                </div>
+                                <div class="arti-active-user">
+                                    <img class="activeBG" src="assets/UI/artiActiveBG.png" />
+                                    <img class="active-char" src="assets/char/Character_Yun_Jin_Side_Icon.webp">
+                                </div>
+                                <div class="arti-icon">
+                                    <img src="assets/artifacts/Item_Calabash_of_Awakening.webp" />
+                                </div>
+                                <div class="arti-rarity">
+                                    <img src="assets/UI/Icon_5_Stars.webp" />
+                                </div>
+                                <div class="arti-level">
+                                    <h2 style="font-size: 19px;">+20</h2>
+                                </div>
                             </div>
-                            <div class="arti-level">
-                                <img src="" />
+                        </div>
+
+                        <div class="arti-item-bg">
+                            <div class="arti-item">
+                                <div class="arti-lock">
+                                    <img src="assets/UI/artilock.png" />
+                                </div>
+                                <div class="arti-active-user">
+                                    <img class="activeBG" src="assets/UI/artiActiveBG.png" />
+                                    <img class="active-char" src="assets/char/Character_Yun_Jin_Side_Icon.webp">
+                                </div>
+                                <div class="arti-icon">
+                                    <img src="assets/artifacts/Item_Skeletal_Hat.webp" />
+                                </div>
+                                <div class="arti-rarity">
+                                    <img src="assets/UI/Icon_5_Stars.webp" />
+                                </div>
+                                <div class="arti-level">
+                                    <h2 style="font-size: 19px;">+20</h2>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -110,21 +197,21 @@
                             <div class="arti-info-text-wrapper">
                                 <div class="arti-info-header">
                                     <div class="arti-name">
-                                        <h1>Song of Life</h1>
+                                        <h1>Plume of Luxury</h1>
                                     </div>
                                 </div>
                                 <div class="arti-info-body">
                                     <div class="px-padding-md"></div>
                                     <div class="arti-type">
-                                        <h3 style="font-size: 20px;">Sands of Eon</h3>
+                                        <h3 style="font-size: 20px;">Plume of Death</h3>
                                     </div>
                                     <div class="px-padding-xxxlg"></div>
                                     <div class="arti-tvr">
                                         <div class="arti-info-type">
-                                            <h2>DEF</h2>
+                                            <h2>ATK</h2>
                                         </div>
                                         <div class="arti-type-value">
-                                            <h1 style="font-size: 44px;">58.3%</h1>
+                                            <h1 style="font-size: 44px;">311</h1>
                                         </div>
                                         <div class="arti-info-rarity">
                                             <img src="assets/UI/5stars.png">
@@ -132,7 +219,7 @@
                                     </div>
                                 </div>
                                 <div class="arti-info-icon">
-                                    <img src="assets/artifacts/Item_Song_of_Life.webp" />
+                                    <img src="assets/artifacts/Item_Plume_of_Luxury.png" />
                                 </div>
                             </div>
                         </div>
@@ -147,16 +234,16 @@
                             </div>
                             <div class="arti-info-substats">
                                 <div class="arti-substat-1">
-                                    <h2>• DEF+69</h2>
+                                    <h2>• CRIT Rate+3.9%</h2>
                                 </div>
                                 <div class="arti-substat-2">
-                                    <h2>• Energy Recharge+12.6%</h2>
+                                    <h2>• Elemental Mastery+58</h2>
                                 </div>
                                 <div class="arti-substat-3">
-                                    <h2>• ATK+8.9%</h2>
+                                    <h2>• DEF+13.9%</h2>
                                 </div>
                                 <div class="arti-substat-4">
-                                    <h2>• CRIT DMG+27.7%</h2>
+                                    <h2>• HP+508</h2>
                                 </div>
                             </div>
                             <div class="arti-desc">
@@ -164,13 +251,13 @@
                                     <h2>Husk of Opulent Dreams:</h2>
                                 </div>
                                 <div class="arti-desc-2pc">
-                                    <i class="fas fa-ban" style="font-size: 1.5em;"></i>
-                                    <h2 style="padding-left: 6px;"> 2-Piece Set: DEF +30%</h2>
+                                    <i class="fas fa-ban" style="font-size: 1.5em; color: #707681;"></i>
+                                    <h2 style="padding-left: 6px; color: #707681;"> 2-Piece Set: DEF +30%</h2>
                                 </div>
                                 <div class="px-padding-sm"></div>
                                 <div class="arti-desc-4pc">
-                                    <i class="fas fa-ban" style="font-size: 1.5em;"></i>
-                                    <h2 style="padding-left: 6px;"> 4-Piece Set: A character equipped with this Artifact set will obtain the Curiosity effect in the following conditions:
+                                    <i class="fas fa-ban" style="font-size: 1.5em; color: #707681;"></i>
+                                    <h2 style="padding-left: 6px; color: #707681;"> 4-Piece Set: A character equipped with this Artifact set will obtain the Curiosity effect in the following conditions:
                                         When on the field, the character gains 1 stack after hitting an opponent with a Geo attack, triggering a maximum of once every 0.3s.
                                         When off the field, the character gains 1 stack every 3s.
                                         Curiosity can stack up to 4 times, each providing 6% DEF and a 6% Geo DMG Bonus.
